# ros2_course_ws_master

./: .gitignore  README.md  frames_2025-11-25_02.22.03.gv
src/cppbasics/: demo1  lib  library  library.cpp  robotmanager  robotmanager.cpp
src/custom_diff_drive/: CMakeLists.txt  README.md  package.xml
src/custom_diff_drive/config/: turtlebot3_control.yaml
src/custom_diff_drive/launch/: custom_diff_drive_launch.xml
src/custom_diff_drive/src/: diff_drive_controller.cpp
src/custom_diff_drive/urdf/: turtlebot3_burger.xacro
src/example_package/: CMakeLists.txt  package.xml
src/example_package/launch/: distance_launch.xml  timer_launch.xml  turtle_tf_launch.xml
src/example_package/src/: namespaces.cpp  service_advertiser.cpp  service_client.cpp  topic_publisher.cpp  turtle_distance.cpp  turtle_speed.cpp  turtle_sub.cpp  turtle_subpub.cpp  turtle_tf_publisher.cpp  turtle_timer.cpp
src/final_project/: CMakeLists.txt  package.xml
src/final_project/config/: mapper_params_online_async.yaml  maze_mapping.rviz  nav2_params.yaml
src/final_project/launch/: aruco_navigation.launch.xml  final_project.launch.xml
src/final_project/materials/scripts/: aruco_4.material
src/final_project/src/: aruco_detector_node.cpp  aruco_goal_node.cpp  color_detector_node.cpp  exploration_manager_node.cpp  map_saver_node.cpp  maze_explorer.cpp  navigation_controller_node.cpp  shape_detector_node.cpp
src/final_project/urdf/: turtlebot3_burger.xacro
src/final_project/worlds/: maze_aruco_final.world  maze_aruco_final_row2.world  maze_cells.json
src/homework4/: CMakeLists.txt  package.xml
src/homework4/config/: turtlebot3_config.yaml
src/homework4/launch/: homework4.launch.xml
src/homework4/materials/scripts/: aruco_0.material  aruco_3.material  pentagon.material  triangle.material
src/homework4/worlds/: aruco_shape_detection.world
src/midterm/: CMakeLists.txt  package.xml
src/midterm/include/midterm/: midterm_node.hpp
src/midterm/launch/: test_launch.xml  validation_launch.xml
src/midterm/models/maze_midterm/: model.config  model.sdf
src/midterm/models/maze_midterm_validation/: model.config  model.sdf
src/midterm/src/: midterm_node.cpp
src/midterm/urdf/: turtlebot3_burger.xacro
src/midterm/worlds/: maze_midterm.world  maze_test.world  maze_validation.world
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: camera_arm_launch.xml  custom_world_camera_arm_launch.xml  display.launch.py  my_robot_launch.xml  my_robot_launch_2.xml
src/my_robot_description/urdf/: camera_arm_robot.urdf.xacro  example_gazebo.xacro  my_robot.urdf.xacro
src/my_robot_description/worlds/: cool_world.world
src/opencv_examples/: CMakeLists.txt  package.xml
src/opencv_examples/src/: blur_smooth.cpp  color_convert.cpp  draw_shapes.cpp  read_display.cpp  resize_crop_rotate.cpp
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/include/path_planning/: goal_pose_publisher.hpp  initial_pose_publisher.hpp
src/path_planning/launch/: initial_pose_launch.xml  path_planning_launch.xml
src/path_planning/src/: goal_pose_publisher.cpp  initial_pose_publisher.cpp
src/turtlebot3_gazebo_lidar/: CMakeLists.txt  package.xml
src/turtlebot3_gazebo_lidar/launch/: turtlebot3_gazebo.launch.xml  turtlebot3_gazebo_teleop_launch copy.xml
src/turtlebot3_gazebo_lidar/src/: lidar_obstacle_avoidance.cpp
src/turtlebot3_gazebo_lidar/urdf/: turtlebot3_burger.xacro
src/turtlebot3_gazebo_lidar/worlds/: turtlebot3_world.world  turtlebot3_world_maze.world
src/vision_demo/: CMakeLists.txt  package.xml
src/vision_demo/launch/: vision_demo.launch.xml
src/vision_demo/materials/scripts/: aruco_1.material  aruco_2.material
src/vision_demo/models/: aruco_board.model
src/vision_demo/models/aruco_marker_1_example_1/: model.config  model.sdf
src/vision_demo/models/aruco_marker_1_example_1/materials/scripts/: aruco.material
src/vision_demo/models/aruco_marker_2/: model.config  model.sdf
src/vision_demo/models/aruco_marker_2/materials/scripts/: aruco.material
src/vision_demo/models/aruco_marker_3/: model.config  model.sdf
src/vision_demo/models/aruco_marker_3/materials/scripts/: aruco.material
src/vision_demo/models/aruco_marker_4/: model.config  model.sdf
src/vision_demo/models/aruco_marker_4/materials/scripts/: aruco.material
src/vision_demo/models/aruco_markers/: generate_markers.py
src/vision_demo/src/: simple_aruco_detector.cpp
src/vision_demo/worlds/: aruco_demo_world.world  aruco_test_world.world  basic_demo_world.world  cool_world.world
